Front: Nicer footer on mobile, some breakpoints edge cases fixed, added metadata and favicon

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,21 +1,47 @@
 .wrapper {
   width: 100%;
-  height: 85px;
+  height: auto;
   background: var(--text);
 }
 
 .container {
   display: flex;
-  height: 100%;
+  flex-direction: column;
+  text-align: center;
   align-items: center;
-  justify-content: space-between;
-
+  justify-content: center;
+  padding: 1.5rem 0.75rem;
   span {
     color: var(--bg_50);
-    font-weight: 700;
     width: 100%;
+    display: block;
+    a {
+      color: inherit;
+      text-decoration: none;
+      transition: color 250ms ease;
+      &:hover {
+        color: var(--accent);
+      }
+    }
     &:last-of-type {
-      text-align: right;
+      margin-top: 0.5rem;
+    }
+  }
+}
+
+@media (min-width: 576px) {
+  .container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    span {
+      &:last-of-type {
+        text-align: right;
+        margin-top: 0;
+      }
+      &:first-of-type {
+        text-align: left;
+      }
     }
   }
 }
